datasets/dataset_txt/mitmproxy/mitmproxy_1461.txt
nandaceg007 commented on 6 May 2015
I get this error when running mitmproxy.
Not sure of what's wrong.
abc@abc-virtual-machine ~ $ mitmproxy
Traceback (most recent call last):
  File "/usr/local/bin/mitmproxy", line 2, in <module>
    from libmproxy.main import mitmproxy
  File "/usr/local/lib/python3.4/dist-packages/libmproxy/main.py", line 73
    except ProxyServerError, v:
                           ^
SyntaxError: invalid syntax